--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body 
 {
-    background-color:beige;
+    background-color:rgb(155, 155, 155);
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 
 {
     text-align: center;
-    color:blue;
+    color:rgb(128, 20, 4);
 }
 
 .projects { display:flex; flex-wrap:wrap; } 
@@ -16,7 +16,7 @@ h1
     width: 30%;
     margin: 10px;
     padding: 20px 10px;
-    background: rgb(244, 22, 22);
+    background: rgb(128, 20, 4);
     border-radius: 25%;
 }
 
@@ -24,4 +24,26 @@ img
 {
     width: 300px;
     height: auto;
+}
+
+.project img
+{
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    border: 2px solid rgb(0, 0, 0); 
+    display: block;
+    margin: auto;
+}
+
+a 
+{ /* change the appearance of ALL links */
+    text-decoration: none;
+    color: rgb(126, 219, 248);
+}
+    
+.project p 
+{ /* change the appearance of paragraph tags inside .project divs */
+    text-align: center;
+    margin: 15px;
 }
