--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,12 @@ h1
     color:rgb(128, 20, 4);
 }
 
-.projects { display:flex; flex-wrap:wrap; } 
+.projects 
+{ 
+    display:flex; 
+    flex-wrap:wrap; 
+} 
+
 .project
 {
     width: 30%;
@@ -47,3 +52,36 @@ a
     text-align: center;
     margin: 15px;
 }
+
+.project h3
+{
+    text-align: center; /* Center-align the title text */
+    margin: 10px 0;     /* Optional: add some spacing around the title */
+    color: rgb(126, 219, 248); /* Optional: Adjust color if desired */
+    font-size: 1.2em;   /* Optional: adjust font size if needed */  
+}
+
+.about
+{
+    display:flex;
+    flex-wrap:wrap;
+    margin-right: 100px;
+    margin-left: 100px;
+    justify-content: center;
+}
+    
+.about p 
+{
+    width:50%;
+    text-align: center;
+    margin: auto;
+    line-height: 125%;
+}
+    
+.about img 
+{
+    width: 150px;
+    height: 200px;
+    border-radius: 25%;
+    border: 2px solid rgb(128, 20, 4);
+ }
